@@ -19,6 +19,9 @@ Enhancements:
  * Issue #124: pyftpdlib now accepts command line options to configure a stand
    alone anonymous FTP server when running pyftpdlib with python's -m option.
 
+ * Issue #125: FTPHandler class now provides two new methods to standardize
+   filesystem commands and transfers logging.
+
  * Issue #127: added FTPHandler.masquerade_address_map option which allows you
    to define multiple 1 to 1 mappings in case you run a FTP server with
    multiple private IP addresses behind a NAT firewall with multiple public
@@ -97,6 +100,8 @@ Major API changes since 0.5.2
      - on_incomplete_file_sent()
      - on_incomplete_file_received()
      - on_login()
+     - log_fs_cmd()
+     - log_transfer()
    * proto_cmds class attribute has been added.  The FTPHandler class  no longer
      relies on "ftpserver.proto_cmds" global dictionary but on
      "ftpserver.FTPHandler.proto_cmds" instead.
